<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_contract_filter_sheet"
    android:orientation="vertical"
    android:paddingStart="@dimen/dp_24"
    android:paddingTop="@dimen/dp_8"
    android:paddingEnd="@dimen/dp_24"
    android:paddingBottom="@dimen/dp_24">

    <View
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_4"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_contract_filter_handle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:includeFontPadding="false"
            android:lineHeight="@dimen/dp_28"
            android:text="@string/contract_filter_title"
            android:textColor="@color/legal_lens_primary"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:includeFontPadding="false"
            android:lineHeight="@dimen/dp_20"
            android:text="@string/contract_filter_reset"
            android:textColor="@color/contract_risk_high"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:fontFamily="sans-serif-medium"
        android:includeFontPadding="false"
        android:lineHeight="@dimen/dp_22"
        android:text="@string/contract_filter_contract_type"
        android:textColor="@color/legal_lens_primary"
        android:textSize="@dimen/sp_15" />

    <LinearLayout
        android:id="@+id/rowService"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_12"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivServiceCheckbox"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:contentDescription="@null"
            android:src="@drawable/selector_contract_filter_checkbox" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_10"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:lineHeight="@dimen/dp_20"
            android:text="@string/contract_filter_service"
            android:textColor="@color/legal_lens_status_text"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowEmployment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivEmploymentCheckbox"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:contentDescription="@null"
            android:src="@drawable/selector_contract_filter_checkbox" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_10"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:lineHeight="@dimen/dp_20"
            android:text="@string/contract_filter_employment"
            android:textColor="@color/legal_lens_status_text"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowCommercial"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivCommercialCheckbox"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:contentDescription="@null"
            android:src="@drawable/selector_contract_filter_checkbox" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_10"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:lineHeight="@dimen/dp_20"
            android:text="@string/contract_filter_commercial"
            android:textColor="@color/legal_lens_status_text"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:fontFamily="sans-serif-medium"
        android:includeFontPadding="false"
        android:lineHeight="@dimen/dp_22"
        android:text="@string/contract_filter_status"
        android:textColor="@color/legal_lens_primary"
        android:textSize="@dimen/sp_15" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvStatusAll"
                style="@style/ContractFilterOption"
                android:text="@string/contract_filter_all" />

            <TextView
                android:id="@+id/tvStatusComplete"
                style="@style/ContractFilterOption"
                android:layout_marginStart="@dimen/dp_8"
                android:text="@string/contract_complete_status" />

            <TextView
                android:id="@+id/tvStatusProcessing"
                style="@style/ContractFilterOption"
                android:layout_marginStart="@dimen/dp_8"
                android:text="@string/contract_processing_status" />

            <TextView
                android:id="@+id/tvStatusDraft"
                style="@style/ContractFilterOption"
                android:layout_marginStart="@dimen/dp_8"
                android:text="@string/contract_draft_status" />
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:fontFamily="sans-serif-medium"
        android:includeFontPadding="false"
        android:lineHeight="@dimen/dp_22"
        android:text="@string/contract_filter_risk_level"
        android:textColor="@color/legal_lens_primary"
        android:textSize="@dimen/sp_15" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvRiskLow"
            style="@style/ContractFilterRiskOption"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/contract_filter_low" />

        <TextView
            android:id="@+id/tvRiskMedium"
            style="@style/ContractFilterRiskOption"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/contract_filter_medium" />

        <TextView
            android:id="@+id/tvRiskHigh"
            style="@style/ContractFilterRiskOption"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/contract_filter_high" />

        <TextView
            android:id="@+id/tvRiskCritical"
            style="@style/ContractFilterRiskOption"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/contract_filter_critical" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnApply"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_24"
        android:background="@drawable/bg_contract_filter_apply"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/contract_filter_apply"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"
        android:textSize="@dimen/sp_15"
        android:textStyle="normal" />
</LinearLayout>
